log
Thu 11 May 2023 04:38:06 PM UTC: 
 tests:  0|4
total_score: 0/70
f903be9
Thu 11 May 2023 04:47:06 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:20: error: invalid type argument of unary ‘*’ (have ‘long unsigned int’)
   36 |   Heap *m = malloc(*sizeof(Heap));
      |                    ^~~~~~~~~~~~~
heap.c:37:27: error: invalid type argument of unary ‘*’ (have ‘long unsigned int’)
   37 |   m -> heapArray = malloc(*sizeof(Heap));
      |                           ^~~~~~~~~~~~~
Compilation failed
621cb51
Thu 11 May 2023 04:47:25 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
bc27fd3
Thu 11 May 2023 04:47:45 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
aeebed7
Thu 11 May 2023 05:04:12 PM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
efa5a71
